# stream-download-rs

./: .gitattributes  Cargo.toml
crates/stream-download-audio/: Cargo.toml  README.md
crates/stream-download-audio/src/: api.rs  lib.rs  pipeline.rs  rodio.rs  rodio_adapter.rs  settings.rs  stream.rs  types.rs
crates/stream-download-audio/src/backends/: common.rs  hls.rs  http.rs  mod.rs
crates/stream-download-audio/src/decode/: byte_queue.rs  mod.rs  symphonia_decoder.rs
crates/stream-download-audio/src/source/: hls.rs  http.rs  mod.rs
crates/stream-download-hls/: Cargo.toml  README.md
crates/stream-download-hls/src/: abr.rs  audio.rs  crypto.rs  downloader.rs  downloader_cached.rs  error.rs  lib.rs  manager.rs  middleware.rs  model.rs  parser.rs  settings.rs  storage.rs  stream.rs  traits.rs  worker.rs
crates/stream-download-hls/src/abr/: bandwidth_estimator.rs  ewma.rs  mod.rs
crates/stream-download-hls/src/cache/: keys.rs  lease.rs  mod.rs
crates/stream-download-hls/src/downloader/: basic.rs  cached.rs  mod.rs
crates/stream-download-hls/src/hls_stream/: mod.rs
crates/stream-download-hls/src/storage/: cache_layer.rs  hls_factory.rs  mod.rs  segmented.rs  tree_handle.rs
crates/stream-download-opendal/src/: lib.rs
crates/stream-download/src/: async_read.rs  lib.rs
crates/stream-download/src/http/: mod.rs  reqwest_client.rs
crates/stream-download/src/process/: mod.rs
crates/stream-download/src/source/: handle.rs  mod.rs
crates/stream-download/src/storage/: adaptive.rs  bounded.rs  file.rs  handle.rs  memory.rs  mod.rs  temp.rs
examples/: Cargo.toml
examples/examples/: audio_hls.rs  audio_mp3.rs  hls.rs  hls_basic_playback.rs  hls_drm.rs  hls_live_abr.rs  hls_live_probe.rs  hls_playback_mpv.rs  hls_seek.rs  rodio_adaptive.rs  stream_hls.rs  stream_hls_seek.rs
tests/: Cargo.toml
tests/tests/: audio_fixture.rs  audio_hls_tests.rs  audio_tests.rs  hls_fixture.rs  hls_tests.rs  integration_test.rs  proptest.rs
tests/tests/fixtures/: audio.rs  hls.rs  mod.rs  setup.rs
