
[workspace]
members = ["./crates/*", "examples", "tests"]
# stream-download-audio is included via the glob "./crates/*"
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
authors = ["Austin Schey <aschey13@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aschey/stream-download-rs"
homepage = "https://github.com/aschey/stream-download-rs"
include = ["/src", "/examples", "/tests", "LICENSE-MIT", "LICENSE-APACHE"]
categories = ["multimedia", "asynchronous", "caching"]
keywords = ["audio", "stream", "media"]

[workspace.dependencies]
aes = "0.8"
async-trait = "0.1.89"
bytes = "1.11"
cbc = "0.1"
educe = "0.6"
futures-util = "0.3"
hls_m3u8 = "0.5.1"
kanal = "0.1.1"
lru = "0.12.5"
mediatype = "0.21"
opendal = "0.55"
parking_lot = "0.12.5"
pin-project-lite = "0.2.16"
rangemap = "1"
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false }
reqwest-middleware = "0.4"
tempfile = "3.24"
thiserror = "2.0.17"
tokio = "1.48"
tokio-util = "0.7.17"
tracing = "0.1.44"
url = "2.5"

# dependencies for examples and tests
libmpv2 = "5.0.2"
reqwest-retry = "0.7.0"
rodio = "0.21.1"
tracing-subscriber = "0.3.22"
tower = "0.5.2"
youtube_dl = "0.10.0"
rstest = "0.26.1"
testcontainers-modules = "0.13.0"
aws-sdk-s3 = "1.119.0"
axum = "0.8.8"
proptest = "1.9.0"
tower-http = "0.6.8"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
allow_attributes = "deny"
doc_markdown = "warn"
default_trait_access = "warn"
ignored_unit_patterns = "warn"
semicolon_if_nothing_returned = "warn"
missing_fields_in_debug = "warn"
use_self = "warn"
impl_trait_in_params = "warn"
missing_panics_doc = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
redundant_closure_for_method_calls = "warn"
