[package]
name = "stream-download-examples"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
stream-download = { path = "../crates/stream-download", features = [
  "reqwest-rustls",
  "reqwest-middleware",
  "process",
  "async-read",
  "registry",
] }
stream-download-opendal = { path = "../crates/stream-download-opendal", optional = true }
stream-download-hls = { path = "../crates/stream-download-hls", optional = true, features = ["aes-decrypt"] }
stream-download-audio = { path = "../crates/stream-download-audio", optional = true, features = ["rodio"] }
async-trait = { workspace = true }
tracing = { workspace = true }
rodio = { workspace = true }
regex = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["make"] }
reqwest-retry = { workspace = true }
youtube_dl = { workspace = true, features = ["tokio"] }
libmpv2 = { workspace = true, optional = true }
testcontainers-modules = { workspace = true, optional = true, features = ["localstack"] }
opendal = { workspace = true, optional = true, features = ["services-s3"] }
aws-sdk-s3 = { workspace = true, optional = true }

[features]
mpv = ["dep:libmpv2"]
hls = ["dep:stream-download-hls"]
audio = ["dep:stream-download-audio"]
opendal = [
  "dep:stream-download-opendal",
  "dep:testcontainers-modules",
  "dep:aws-sdk-s3",
  "dep:opendal",
]

[[example]]
name = "video_mpv"
required-features = ["mpv"]

[[example]]
name = "s3"
required-features = ["opendal"]

[[example]]
name = "hls"
required-features = ["hls"]

[[example]]
name = "hls_drm"
required-features = ["hls"]

[[example]]
name = "audio_hls"
required-features = ["audio", "hls"]

[[example]]
name = "audio_mp3"
required-features = ["audio"]
