[package]
name = "tests"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
stream-download = { path = "../crates/stream-download", features = [
  "reqwest-middleware",
  "process",
  "async-read",
  "registry",
] }
stream-download-opendal = { path = "../crates/stream-download-opendal" }
stream-download-hls = { path = "../crates/stream-download-hls", features = ["aes-decrypt"] }
stream-download-audio = { path = "../crates/stream-download-audio", features = ["rodio"] }
tower-http = { workspace = true, features = ["fs"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
opendal = { workspace = true, features = ["services-http"] }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
aes = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
cbc = { workspace = true }
futures-util = { workspace = true }
proptest = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
