[package]
name = "stream-download-hls"
version = "0.0.1"
readme = "README.md"
description = "HLS extension for stream-download"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
include.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
stream-download = { version = "0.22.9", path = "../stream-download" }
tokio = { workspace = true, features = ["sync", "macros", "rt", "time"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true }
hls_m3u8 = "0.4"
reqwest = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
