[package]
name = "stream-download-hls"
version = "0.0.1"
readme = "README.md"
description = "HLS extension for stream-download"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
include.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
stream-download = { version = "0.22.9", path = "../stream-download" }
tokio = { workspace = true, features = ["sync", "macros", "rt", "rt-multi-thread", "time"] }
aes = { workspace = true, optional = true }
async-trait = { workspace = true }
bytes = { workspace = true }
cbc = { workspace = true, optional = true }
futures-util = { workspace = true }
hls_m3u8 = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[features]
default = []
aes-decrypt = ["dep:aes", "dep:cbc"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
